@@ -5,6 +5,8 @@ git-annex (0.15) UNRELEASED; urgency=low
     not yet supported.
   * Add trust and untrust subcommands, to allow configuring remotes
     that are trusted to retain files without explicit checking.
+  * Fix bug in numcopies handling when a repoisitory has multiple remotes
+    that point to the same repository.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 28 Dec 2010 13:13:20 -0400
 
